--- a/config/metatag.metatag_defaults.node__event.yml
+++ b/config/metatag.metatag_defaults.node__event.yml
@@ -25,7 +25,7 @@ tags:
   schema_event_description: '[node:sa_description|node:sa_seo_description|node:summary]'
   schema_event_end_date: '[node:field_when:0:end_value-custom:Y-m-d\TH:i:sO]'
   schema_event_event_attendance_mode: '[node:sa_attendance_mode:value]'
-  schema_event_event_status: '[node:sa_event_status]'
+  schema_event_event_status: '[node:sa_event_status:value]'
   schema_event_id: '[current-page:url]'
   schema_event_image: 'a:5:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:150:"[node:sa_seo_image:entity:field_media_image:sa_social_media_facebook:url|node:sa_featured_image:entity:field_media_image:sa_social_media_facebook:url]";s:5:"width";s:154:"[node:sa_seo_image:entity:field_media_image:sa_social_media_facebook:width|node:sa_featured_image:entity:field_media_image:sa_social_media_facebook:width]";s:6:"height";s:156:"[node:sa_seo_image:entity:field_media_image:sa_social_media_facebook:height|node:sa_featured_image:entity:field_media_image:sa_social_media_facebook:height]";}'
   schema_event_location: 'a:5:{s:5:"@type";s:5:"Place";s:4:"name";s:31:"[node:field_where:entity:title]";s:3:"url";s:52:"[node:field_where:entity:field_location_address:url]";s:7:"address";a:6:{s:5:"@type";s:13:"PostalAddress";s:13:"streetAddress";s:62:"[node:field_where:entity:field_location_address:address_line1]";s:15:"addressLocality";s:57:"[node:field_where:entity:field_location_address:locality]";s:13:"addressRegion";s:68:"[node:field_where:entity:field_location_address:administrative_area]";s:10:"postalCode";s:61:"[node:field_where:entity:field_location_address:sorting_code]";s:14:"addressCountry";s:61:"[node:field_where:entity:field_location_address:country_code]";}s:3:"geo";a:3:{s:5:"@type";s:14:"GeoCoordinates";s:8:"latitude";s:44:"[node:field_where:entity:field_geofield:lat]";s:9:"longitude";s:45:"[node:field_where:entity:field_geofield:long]";}}'
@@ -33,7 +33,7 @@ tags:
   schema_event_offers: 'a:8:{s:5:"@type";s:5:"Offer";s:3:"@id";s:18:"[current-page:url]";s:5:"price";s:14:"[node:sa_cost]";s:13:"priceCurrency";s:24:"[node:sa_currency:value]";s:3:"url";s:27:"[node:sa_register_link:url]";s:12:"availability";s:28:"[node:sa_availability:value]";s:9:"validFrom";s:45:"[node:sa_validfrom:date:custom:Y-m-d\TH:i:sO]";s:8:"category";s:18:"[node:sa_category]";}'
   schema_event_organizer: 'a:3:{s:5:"@type";s:12:"Organization";s:4:"name";s:11:"[site:name]";s:3:"url";s:10:"[site:url]";}'
   schema_event_start_date: '[node:field_when:0:value-custom:Y-m-d\TH:i:sO]'
-  schema_event_type: '[node:sa_event_type]'
+  schema_event_type: '[node:sa_event_type:value]'
   schema_event_url: '[current-page:url]'
   title: '[node:sa_seo_page_title|node:title] | [site:name]'
   twitter_cards_description: '[node:sa_description|node:sa_seo_description|node:summary]'
