--- a/config/field.storage.node.sa_event_type.yml
+++ b/config/field.storage.node.sa_event_type.yml
@@ -11,80 +11,80 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: event
+      value: Event
       label: Event
     -
-      value: businessevent
-      label: BusinessEvent
+      value: BusinessEvent
+      label: 'Business Event'
     -
-      value: childrensevent
-      label: ChildrensEvent
+      value: ChildrensEvent
+      label: 'Childrens Event'
     -
-      value: comedyevent
-      label: ComedyEvent
+      value: ComedyEvent
+      label: 'Comedy Event'
     -
-      value: courseinstance
-      label: CourseInstance
+      value: CourseInstance
+      label: 'Course Instance'
     -
-      value: danceevent
-      label: DanceEvent
+      value: DanceEvent
+      label: 'Dance Event'
     -
-      value: deliveryevent
-      label: DeliveryEvent
+      value: DeliveryEvent
+      label: 'Delivery Event'
     -
-      value: educationevent
-      label: EducationEvent
+      value: EducationEvent
+      label: 'Education Event'
     -
-      value: eventseries
-      label: EventSeries
+      value: EventSeries
+      label: 'Event Series'
     -
-      value: exhibitionevent
-      label: ExhibitionEvent
+      value: ExhibitionEvent
+      label: 'Exhibition Event'
     -
-      value: festival
+      value: Festival
       label: Festival
     -
-      value: foodevent
-      label: FoodEvent
+      value: FoodEvent
+      label: 'Food Event'
     -
-      value: hackathon
+      value: Hackathon
       label: Hackathon
     -
-      value: literaryevent
-      label: LiteraryEvent
+      value: LiteraryEvent
+      label: 'Literary Event'
     -
-      value: musicevent
-      label: MusicEvent
+      value: MusicEvent
+      label: 'Music Event'
     -
-      value: publicationevent
-      label: PublicationEvent
+      value: PublicationEvent
+      label: 'Publication Event'
     -
-      value: broadcastevent
-      label: BroadcastEvent
+      value: BroadcastEvent
+      label: 'Broadcast Event'
     -
-      value: ondemaandevent
-      label: OnDemandEvent
+      value: OnDemandEvent
+      label: 'On Demand Event'
     -
-      value: saleevent
-      label: SaleEvent
+      value: SaleEvent
+      label: 'Sale Event'
     -
-      value: screeningevent
-      label: ScreeningEvent
+      value: ScreeningEvent
+      label: 'Screening Event'
     -
-      value: socialevent
-      label: SocialEvent
+      value: SocialEvent
+      label: 'Social Event'
     -
-      value: sportsevent
-      label: SportsEvent
+      value: SportsEvent
+      label: 'Sports Event'
     -
-      value: theaterevent
-      label: TheaterEvent
+      value: TheaterEvent
+      label: 'Theater Event'
     -
-      value: userinteraction
-      label: UserInteraction
+      value: UserInteraction
+      label: 'User Interaction'
     -
-      value: visualartsevent
-      label: VisualArtsEvent
+      value: VisualArtsEvent
+      label: 'Visual Arts Event'
   allowed_values_function: ''
 module: options
 locked: false
