--- a/config/field.field.node.event.sa_event_type.yml
+++ b/config/field.field.node.event.sa_event_type.yml
@@ -16,7 +16,7 @@ required: false
 translatable: false
 default_value:
   -
-    value: event
+    value: Event
 default_value_callback: ''
 settings: {  }
 field_type: list_string
