Adds saplings-content-base-header

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
       "drupal/token": "*",
       "drupal/token_or": "*",
       "drupal/view_unpublished": "*",
+      "kanopi/saplings-content-base-header": "*",
       "kanopi/saplings-content-base-seo": "*"
   }
 }
